adds evolution of wasm

--- a/master_thesis.bib
+++ b/master_thesis.bib
@@ -246,3 +246,12 @@
   year = {2023},
   organization = {emscripten.org}
 }
+
+@misc{zakai_2013_gap,
+  author = {Zakai, Alon and Nyman, Robert},
+  month = {12},
+  title = {{Gap between asm.js and native performance gets even narrower with float32 optimizations – Mozilla Hacks - the Web developer blog}},
+  url = {https://hacks.mozilla.org/2013/12/gap-between-asm-js-and-native-performance-gets-even-narrower-with-float32-optimizations/},
+  year = {2013},
+  organization = {Mozilla Hacks – the Web Developer Blog}
+}
