--- a/sections/2_wasm.tex
+++ b/sections/2_wasm.tex
@@ -2,12 +2,11 @@ Since the dot-com era, JavaScript has remained the only client-side language for
 
 In 2013, Mozilla engineers introduced a solution called asm.js, which focused on the parts of JavaScript that could be optimized ahead of time. This enabled C/C++ programs to be compiled into the asm.js target format and executed using a JavaScript runtime, achieving faster performance than equivalent JavaScript programs. However, benchmarks revealed that asm.js code ran about 1.5 times slower than the native code written in C++ \cite{zakai_2013_gap}.
 
-As the need for improved web performance persisted, asm.js was replaced by WebAssembly (wasm), introduced in 2015.
-“WebAssembly (abbreviated \Gls{WebAssembly}) is a safe, portable, low-level code format designed for efficient execution and compact representation. Its main goal is to enable high performance applications on the Web, but it does not make any Web-specific assumptions or provide Web-specific features, so it can be employed in other environments as well \cite[p.~1]{webassemblycommunitygroup_2023_webassembly}.”
-The Wasm standard is developed by W3C Working Group and W3C Community Group. 
+As the need for improved web performance grew, asm.js was replaced by WebAssembly (wasm).
+Introduced in 2015, “WebAssembly (abbreviated \Gls{WebAssembly}), is a safe, portable, low-level code format designed for efficient execution and compact representation. Its main goal is to enable high performance applications on the Web, but it does not make any Web-specific assumptions or provide Web-specific features, so it can be used in other environments as well \cite[p.~1]{webassemblycommunitygroup_2023_webassembly}.”
+The Wasm standard is developed by W3C Working Group (WG) and W3C Community Group (CG). 
 
-\section{Performance}
-
+% \section{Performance}
 
 % \begin{itemize}
 %   \item \textbf{Fast}: 
@@ -20,11 +19,75 @@ The Wasm standard is developed by W3C Working Group and W3C Community Group.
 
 \section{Specification}
 \label{sec:specification}
+This WebAssembly specification document \footnote{\url{https://webassembly.github.io/spec}} focuses on Wasm's core Instruction Set Architecture layer, defining the instruction set, binary encoding, validation, execution semantics, and textual representation. However, it does not specify how WebAssembly programs interact with the execution environment or how they are invoked within that environment.
 
-phases: \footnote{\url{https://github.com/WebAssembly/meetings/blob/main/process/phases.md}}
+From creating a proposal to fully integrating it into WebAssembly core specification, it must process through several phases. Each proposal follows this progression \footnote{\url{https://github.com/WebAssembly/meetings/blob/main/process/phases.md}}:
+\begin{itemize}
+  \item 0. Pre-Proposal [Individual]: An individual files an issue on the design repository to discuss the idea. The idea is then discussed and championed by one or more members. The proposal's general interest is voted on by the Community Group to ensure its scope and viability.
+  \item 1. Feature Proposal [CG]: A repository is created, and the champion works on reaching broad consensus within the Community Group. The design is iterated upon, and prototype implementations may be created to demonstrate the feature's viability.
+  \item 2. Feature Description Available [CG + WG]: A precise and complete overview document is produced with a high level of consensus. Prototype implementations create a comprehensive test suite, but updates to the reference interpreter and spec document aren't yet required.
+  \item 3. Implementation Phase [CG + WG]: WebAssembly runtimes implement the feature, the spec document is updated with full English prose and formalization, and the reference interpreter is updated with a complete implementation. Toolchains implement the feature, and any remaining open questions are resolved.
+  \item 4. Standardize the Feature [WG]: The feature is handed over to the Working Group, which discusses the feature, considers edge cases, and confirms consensus on its completion. The Working Group periodically polls on the feature's "ship-worthiness." If only minor changes are needed, they are made; otherwise, the feature is sent back to the Community Group.
+  \item 5. The Feature is Standardized [WG]: Once consensus is reached among Working Group members that the feature is complete, editors merge the feature into the main branch of the primary spec repository.
+\end{itemize}
 
-\section{Implemented proposals}
-\label{sec:implemented-proposals}
+
+\section{Proposals}
+\label{sec:proposals}
+In this section, 
+
+\ref{tab:active-proposals}
+
+\footnote{\url{https://github.com/WebAssembly/proposals}}
+
+\begin{table*}[htbp]
+  \centering
+  \begin{tabular}{|ll|}
+    \hline
+    \multicolumn{2}{|c|}{\textbf{Phase 5 - The Feature is Standardized (WG)}}                                                                                                                              \\ \hline
+    \multicolumn{1}{|c|}{\textbf{Proposal}}                              & \multicolumn{1}{c|}{\textbf{Champion}}                                                                                          \\ \hline
+    \multicolumn{2}{|l|}{\textit{\begin{tabular}[c]{@{}l@{}}Currently, there is no active Phase 5 proposal\\ that has not been merged into the Wasm Core spec.\end{tabular}}}                              \\ \hline
+    \multicolumn{2}{|c|}{\textbf{Phase 4 - Standardize the Feature (WG)}}                                                                                                                                  \\ \hline
+    \multicolumn{1}{|l|}{Tail call}                                      & Andreas Rossberg                                                                                                                \\ \hline
+    \multicolumn{1}{|l|}{Extended Constant Expressions}                  & Sam Clegg                                                                                                                       \\ \hline
+    \multicolumn{2}{|c|}{\textbf{Phase 3 - Implementation Phase (CG + WG)}}                                                                                                                                \\ \hline
+    \multicolumn{1}{|l|}{Multiple memories}                              & Andreas Rossberg                                                                                                                \\ \hline
+    \multicolumn{1}{|l|}{Custom Annotation Syntax in the Text Format}    & Andreas Rossberg                                                                                                                \\ \hline
+    \multicolumn{1}{|l|}{Memory64}                                       & Sam Clegg                                                                                                                       \\ \hline
+    \multicolumn{1}{|l|}{Exception handling}                             & Heejin Ahn                                                                                                                      \\ \hline
+    \multicolumn{1}{|l|}{Web Content Security Policy}                    & Francis McCabe                                                                                                                  \\ \hline
+    \multicolumn{1}{|l|}{Branch Hinting}                                 & Yuri Iozzelli                                                                                                                   \\ \hline
+    \multicolumn{1}{|l|}{Relaxed SIMD}                                   & Marat Dukhan \& Zhi An Ng                                                                                                       \\ \hline
+    \multicolumn{1}{|l|}{Typed Function References}                      & Andreas Rossberg                                                                                                                \\ \hline
+    \multicolumn{1}{|l|}{Garbage collection}                             & Andreas Rossberg                                                                                                                \\ \hline
+    \multicolumn{1}{|l|}{Threads}                                        & Conrad Watt                                                                                                                     \\ \hline
+    \multicolumn{1}{|l|}{JS Promise Integration}                         & Ross Tate and Francis McCabe                                                                                                    \\ \hline
+    \multicolumn{1}{|l|}{Type Reflection for WebAssembly JavaScript API} & Ilya Rezvov                                                                                                                     \\ \hline
+    \multicolumn{2}{|c|}{\textbf{Phase 2 - Proposed Spec Text Available (CG + WG)}}                                                                                                                        \\ \hline
+    \multicolumn{1}{|l|}{ECMAScript module integration}                  & Asumu Takikawa \& Ms2ger                                                                                                        \\ \hline
+    \multicolumn{1}{|l|}{Relaxed dead code validation}                   & Conrad Watt and Ross Tate                                                                                                       \\ \hline
+    \multicolumn{1}{|l|}{Numeric Values in WAT Data Segments}            & Ezzat Chamudi                                                                                                                   \\ \hline
+    \multicolumn{1}{|l|}{Instrument and Tracing Technology}              & Richard Winterton                                                                                                               \\ \hline
+    \multicolumn{2}{|c|}{\textbf{Phase 1 - Feature Proposal (CG)}}                                                                                                                                         \\ \hline
+    \multicolumn{1}{|l|}{Type Imports}                                   & Andreas Rossberg                                                                                                                \\ \hline
+    \multicolumn{1}{|l|}{Component Model}                                & Luke Wagner                                                                                                                     \\ \hline
+    \multicolumn{1}{|l|}{WebAssembly C and C++ API}                      & Andreas Rossberg                                                                                                                \\ \hline
+    \multicolumn{1}{|l|}{Extended Name Section}                          & Ashley Nelson                                                                                                                   \\ \hline
+    \multicolumn{1}{|l|}{Flexible Vectors}                               & Petr Penzin                                                                                                                     \\ \hline
+    \multicolumn{1}{|l|}{Call Tags}                                      & Ross Tate                                                                                                                       \\ \hline
+    \multicolumn{1}{|l|}{Stack Switching}                                & Francis McCabe \& Sam Lindley                                                                                                   \\ \hline
+    \multicolumn{1}{|l|}{Constant Time}                                  & \begin{tabular}[c]{@{}l@{}}Sunjay Cauligi, Garrett Gu, \\ John Renner, Hovav Shacham, \\ Deian Stefan, Conrad Watt\end{tabular} \\ \hline
+    \multicolumn{1}{|l|}{JS Customization for GC Objects}                & Asumu Takikawa                                                                                                                  \\ \hline
+    \multicolumn{1}{|l|}{Memory control}                                 & Deepti Gandluri                                                                                                                 \\ \hline
+    \multicolumn{1}{|l|}{Reference-Typed Strings}                        & Andy Wingo                                                                                                                      \\ \hline
+    \multicolumn{1}{|l|}{Profiles}                                       & Andreas Rossberg                                                                                                                \\ \hline
+    \multicolumn{2}{|c|}{\textbf{Phase 0 - Pre-Proposal (CG)}}                                                                                                                                                      \\ \hline
+    \multicolumn{2}{|l|}{\textit{Currently, there is no active pre-proposal.}}                                                                                                                    \\ \hline
+    \end{tabular}
+  \caption{Active proposals in the WebAssembly CG and WG.}
+	\label{tab:active-proposals}
+\end{table*}
+
 
 \subsection{Multi-Value Return}
 In modern programming languages that support tuples, like Kotlin, Rust or Python, developers can effortlessly bundle several values into a single structure for returning from a function. Simple tasks, such as switching a pair of values or sorting an array, become challenging since they must be performed within the linear memory block. Some arithmetic functions, including modular operations and carry bits, can also yield multiple values.
