adds new structure

--- a/master_thesis.bib
+++ b/master_thesis.bib
@@ -255,3 +255,103 @@
   year = {2013},
   organization = {Mozilla Hacks – the Web Developer Blog}
 }
+
+@misc{clark_2022_wasmtime,
+  author = {Clark, Lin},
+  month = {09},
+  title = {Wasmtime Reaches 1.0: Fast, Safe and Production Ready!},
+  url = {https://bytecodealliance.org/articles/wasmtime-1-0-fast-safe-and-production-ready},
+  urldate = {2023-04-28},
+  year = {2022},
+  organization = {Bytecode Alliance}
+}
+
+@misc{fitzgerald_2021_hit,
+  author = {Fitzgerald, Nick},
+  month = {05},
+  title = {{Hit the Ground Running: Wasm Snapshots for Fast Start Up}},
+  url = {https://fitzgeraldnick.com/2021/05/10/wasm-summit-2021.html},
+  urldate = {2023-04-30},
+  year = {2021},
+  organization = {fitzgeraldnick.com}
+}
+
+@misc{bytecodealliance_2023_wizer,
+  author = {Bytecode Alliance},
+  month = {04},
+  title = {{Wizer Github Repository}},
+  url = {https://github.com/bytecodealliance/wizer},
+  urldate = {2023-04-30},
+  year = {2023},
+  organization = {GitHub}
+}
+
+@misc{webassemblywg_2023_webassembly,
+  author = {WebAssembly WG},
+  month = {04},
+  title = {{WebAssembly proposals}},
+  url = {https://github.com/WebAssembly/proposals},
+  urldate = {2023-05-07},
+  year = {2023},
+  organization = {WebAssembly GitHub Page}
+}
+
+@misc{clark_2017_what,
+  author = {Clark, Lin},
+  month = {02},
+  title = {{What makes WebAssembly fast? – Mozilla Hacks - the Web developer blog}},
+  url = {https://hacks.mozilla.org/2017/02/what-makes-webassembly-fast/},
+  urldate = {2023-05-13},
+  year = {2017},
+  organization = {Mozilla Hacks – the Web developer blog}
+}
+
+@misc{mozillacorporation_2023_webassembly,
+  author = {Mozilla Corporation},
+  month = {03},
+  title = {{WebAssembly Concepts - WebAssembly | MDN}},
+  url = {https://developer.mozilla.org/en-US/docs/WebAssembly/Concepts},
+  year = {2023},
+  organization = {MDN Web Docs}
+}
+
+@misc{webassembly_2020_webassemblywabt,
+  author = {WebAssembly},
+  month = {06},
+  publisher = {WebAssembly},
+  title = {{WebAssembly/wabt}},
+  url = {https://github.com/WebAssembly/wabt},
+  urldate = {2023-05-14},
+  year = {2020},
+  organization = {Wabt project}
+}
+
+@misc{webassemblyw3c_2023_webassembly,
+  author = {WebAssembly & W3C},
+  month = {05},
+  title = {{WebAssembly W3C Proposal Process}},
+  url = {https://github.com/WebAssembly/meetings/blob/main/process/phases.md},
+  urldate = {2023-05-16},
+  year = {2023},
+  organization = {WebAssembly / Meetings GitHub Repository}
+}
+
+@misc{akinyemi_2023_awesome,
+  author = {Akinyemi, Stephen},
+  month = {05},
+  title = {{Awesome WebAssembly Runtimes}},
+  url = {https://github.com/appcypher/awesome-wasm-runtimes},
+  urldate = {2023-05-17},
+  year = {2023},
+  organization = {GitHub / Awesome WebAssembly Runtimes}
+}
+
+@misc{mozillacorporation_2023_understanding,
+  author = {Mozilla Corporation},
+  month = {02},
+  title = {{Understanding WebAssembly text format}},
+  url = {https://developer.mozilla.org/en-US/docs/WebAssembly/Understanding_the_text_format},
+  urldate = {2023-05-17},
+  year = {2023},
+  organization = {MDN Web Docs / WebAssembly}
+}
