worked through the chapters, better citation

--- a/master_thesis.bib
+++ b/master_thesis.bib
@@ -355,3 +355,205 @@
   year = {2023},
   organization = {MDN Web Docs / WebAssembly}
 }
+
+@misc{bytecodealliance_2022_wasmtime,
+  author = {Bytecode Alliance},
+  month = {11},
+  title = {{Wasmtime}},
+  url = {https://github.com/bytecodealliance/wasmtime},
+  urldate = {2023-05-22},
+  year = {2022},
+  organization = {GitHub / Wasmtime Repository}
+}
+
+@misc{wasmerinc_2023_wasmer,
+  author = {Wasmer Inc.},
+  month = {05},
+  title = {{Wasmer}},
+  url = {https://github.com/wasmerio/wasmer},
+  urldate = {2023-05-22},
+  year = {2023},
+  organization = {GitHub / Wasmer Repository}
+}
+
+@misc{shymanskyy_2023_wasm3,
+  author = {Shymanskyy, Volodymyr and Massey, Steven and Graey, Max},
+  month = {05},
+  title = {{Wasm3}},
+  url = {https://github.com/wasm3/wasm3},
+  urldate = {2023-05-22},
+  year = {2023},
+  organization = {GitHub / Wasm3}
+}
+
+@misc{he_2023_wasmedge,
+  author = {He, Yi-Ying and WasmEdge},
+  month = {05},
+  title = {{WasmEdge}},
+  url = {https://github.com/WasmEdge/WasmEdge},
+  urldate = {2023-05-22},
+  year = {2023},
+  organization = {GitHub / WasmEdge}
+}
+
+@misc{cloudnativecomputingfoundation_2023_cloud,
+  author = {Cloud Native Computing Foundation},
+  month = {05},
+  title = {{Cloud Native Computing Foundation}},
+  url = {https://www.cncf.io},
+  urldate = {2023-05-23},
+  year = {2023},
+  organization = {Cloud Native Computing Foundation (CNCF)}
+}
+
+@misc{butcher_2023_the,
+  author = {Butcher, Matt and Matei, Radu},
+  month = {01},
+  publisher = {InfoQ},
+  title = {{The Six Ways of Optimizing WebAssembly}},
+  url = {https://www.infoq.com/articles/six-ways-optimize-webassembly},
+  urldate = {2023-05-23},
+  year = {2023},
+  organization = {InfoQ}
+}
+
+@misc{rustlangcommunity_2021_customizing,
+  author = {Rust Lang Community},
+  month = {02},
+  title = {{Customizing Builds with Release Profiles / The Rust Programming Language}},
+  url = {https://doc.rust-lang.org/book/ch14-01-release-profiles.html},
+  urldate = {2023-05-23},
+  year = {2021},
+  organization = {Rust Lang Documentation}
+}
+
+@misc{webassemblycommunity_2023_gc,
+  author = {WebAssembly Community},
+  month = {05},
+  title = {{GC Proposal for WebAssembly}},
+  url = {https://github.com/WebAssembly/gc},
+  urldate = {2023-05-24},
+  year = {2023},
+  organization = {GitHub / Wasm GC}
+}
+
+@misc{sekhar_2023_mobile,
+  author = {Sekhar, Vivek},
+  month = {03},
+  publisher = {Wasm I/O 2023},
+  title = {{Mobile app development with WebAssembly GC}},
+  url = {https://www.youtube.com/watch?v=fDNXomIn53Y},
+  urldate = {2023-05-24},
+  year = {2023},
+  organization = {Wasm I/O 2023}
+}
+
+@misc{kotlin_2023_kotlin,
+  author = {Kotlin},
+  month = {05},
+  title = {{Kotlin Wasm | Kotlin}},
+  url = {https://kotlinlang.org/docs/wasm-overview.html},
+  urldate = {2023-05-24},
+  year = {2023},
+  organization = {Kotlin}
+}
+
+@misc{gohman_2023_wasi,
+  author = {Gohman, Dan},
+  month = {05},
+  title = {{WASI roadmap}},
+  url = {https://github.com/WebAssembly/meetings/blob/main/wasi/2023/presentations/2023-02-09-gohman-wasi-roadmap.pdf},
+  urldate = {2023-05-24},
+  year = {2023},
+  organization = {GitHub / WebAssembly Meetings Repository}
+}
+
+@misc{clark_2022_wasi,
+  author = {Clark, Lin},
+  month = {02},
+  title = {{WASI: a New Kind of System Interface}},
+  url = {https://www.infoq.com/presentations/wasi-system-interface},
+  urldate = {2023-05-24},
+  year = {2022},
+  organization = {InfoQ / QCon plus}
+}
+
+@misc{gohman_2019_wasi,
+  author = {Gohman, Dan},
+  month = {11},
+  title = {{WASI overview}},
+  url = {https://github.com/bytecodealliance/wasmtime/blob/main/docs/WASI-overview.md},
+  urldate = {2023-05-24},
+  year = {2019},
+  organization = {GitHub / Wasmtime Respository}
+}
+
+@misc{actixteam_actix,
+  author = {Actix Team},
+  title = {{Actix}},
+  url = {https://actix.rs},
+  urldate = {2023-05-25},
+  organization = {actix.rs}
+}
+
+@misc{cloudflareinc_cloudflare,
+  author = {Cloudflare, Inc},
+  title = {{Cloudflare R2 | Zero Egress Distributed Object Storage}},
+  url = {https://www.cloudflare.com/en-gb/products/r2},
+  urldate = {2023-05-25},
+  organization = {Cloudflare}
+}
+
+@misc{fastlyinc_serverless,
+  author = {Fastly, Inc},
+  title = {{Serverless Edge Compute Solutions | Fastly}},
+  url = {https://www.fastly.com/products/edge-compute},
+  urldate = {2023-05-25},
+  organization = {www.fastly.com}
+}
+
+@misc{webinteroperableruntimescommunitygroup_wintercg,
+  author = {Web-interoperable Runtimes Community Group},
+  title = {{WinterCG}},
+  url = {https://wintercg.org},
+  urldate = {2023-05-25},
+  organization = {Web-interoperable Runtimes Community Group}
+}
+
+@misc{honocommunity_2023_hono,
+  author = {Hono Community},
+  month = {05},
+  title = {{Hono - Ultrafast web framework for the Edges}},
+  url = {https://hono.dev},
+  urldate = {2023-05-25},
+  year = {2023},
+  organization = {hono.dev}
+}
+
+@misc{fitzgerald_2020_webassembly,
+  author = {Fitzgerald, Nick},
+  month = {08},
+  title = {{WebAssembly Reference Types in Wasmtime}},
+  url = {https://fitzgeraldnick.com/2020/08/27/reference-types-in-wasmtime.html},
+  urldate = {2023-05-26},
+  year = {2020},
+  organization = {fitzgeraldnick.com}
+}
+
+@misc{couriol_2020_webassembly,
+  author = {Couriol, Bruno},
+  month = {09},
+  title = {{WebAssembly Reference Types Implemented in wasmtime, Lets Wasm Modules Handle Complex Types}},
+  url = {https://www.infoq.com/news/2020/09/wasm-reference-types-wasmtime},
+  urldate = {2023-05-26},
+  year = {2020},
+  organization = {InfoQ}
+}
+
+@misc{mozillafoundation_javascript,
+  author = {Mozilla Foundation},
+  title = {{JavaScript modules}},
+  url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules},
+  urldate = {2023-05-29},
+  organization = {MDN Web Docs / ES-Modules}
+}
