--- a/tables/tab_active_proposals.tex
+++ b/tables/tab_active_proposals.tex
@@ -42,6 +42,6 @@
     \multicolumn{2}{|c|}{\textbf{Phase 0 - Pre-Proposal (CG)}}                                                                                                                                                      \\ \hline
     \multicolumn{2}{|l|}{\textit{Currently, there is no active pre-proposal.}}                                                                                                                    \\ \hline
   \end{tabular}
-  \caption{Active proposals in the WebAssembly CG and WG.}
+  \caption{Active proposals in the WebAssembly CG and WG obtained from \cite{webassemblywg_2023_webassembly}}
   \label{tab:active-proposals}
 \end{table}
