adds drawio assets etc.

--- a/master_thesis.bib
+++ b/master_thesis.bib
@@ -557,3 +557,14 @@
   urldate = {2023-05-29},
   organization = {MDN Web Docs / ES-Modules}
 }
+
+@misc{speedtestdemon_2021_cheat,
+  author = {Speed Test Demon},
+  month = {07},
+  publisher = {Speed Test Demon},
+  title = {{Cheat Sheet on Curl Performance Metrics: how to benchmark server latency with curl}},
+  url = {https://speedtestdemon.com/a-guide-to-curls-performance-metrics-how-to-analyze-a-speed-test-result},
+  urldate = {2023-05-30},
+  year = {2021},
+  organization = {Speed Test Demon}
+}
